# src/router.js
@@ -46,8 +46,10 @@ router.get('/private-messages/:userId', requireJWT, MessageController.getPrivate
 router.post('/private-messages/:userId', requireJWT, MessageController.addPrivateMessage)
 
 router.get('/admin/users/get-auth-history', requireJWT, requireAdmin, AuthHistoryController.getAuthHistory)
+router.post('/admin/users/create-new-account', requireJWT, requireAdmin, AdminController.createNewAccount)
 router.post('/admin/users/change-password/:userId', requireJWT, requireAdmin, AdminController.userChangePassword)
 router.post('/admin/users/change-role/:userId', requireJWT, requireAdmin, AdminController.userChangeRole)
+router.put('/admin/users/change-is-activated/:userId', requireJWT, requireAdmin, AdminController.changeIsActivated)
 
 router.get('/admin/app-config', requireJWT, requireAdmin, AppConfigurationsController.getAppConfigurations)
 router.put('/admin/app-config', requireJWT, requireAdmin, AppConfigurationsController.editAppConfigurations)
